src/test/baseman/invalid-usage/case-1/subcases.ts
export default [
  {
    name: 'help-long',
    args: ['--help'],
  },
  {
    name: 'no-argument',
    args: [],
  },
];
